1- fixing the probelm of responsivness 2- As it is supposed to be all the screen that its width   less than or equal 800px will be treated the same   the container will take all the width , 75% for the form   and 20%  for the side bar and 5% for the gap

--- a/src/pages/Settings/Settings.module.css
+++ b/src/pages/Settings/Settings.module.css
@@ -4,14 +4,11 @@
   justify-content: center;
   gap: 20px;
   min-width: 700px;
-  
- 
 }
 
 .aside-bar {
   width: 20%;
   max-width: 300px;
-  
 }
 
 .left-side {
@@ -19,7 +16,6 @@
   width: 60%;
   max-width: 700px;
   border-radius: 5px;
-  
 }
 
 .account {
@@ -27,10 +23,15 @@
   border-radius: 4px;
 }
 
-
-
-@media (max-width: 1000px) {
+@media (max-width: 800px) {
   .contanier {
-   
+    gap: 5%;
+    width: 100vw;
+  }
+  .aside-bar {
+    width: 25%;
+  }
+  .left-side {
+    width: 70%;
   }
 }
